[package]
name = "server_tokio"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.12.0", features = ["full"] }
lazy_static = "1.4.0"

[[bin]]
name = "server_tokio"
path = "server_tokio.rs"
